# String-searching-algorithms

./: CMakeLists.txt  Parser.cpp  Parser.h  main.cpp
preprocessing/: BlockPreprocessor.cpp  BlockPreprocessor.h  BorderPreprocessor.cpp  BorderPreprocessor.h  IPreprocessor.cpp  IPreprocessor.h
substring/: ISubstring.cpp  ISubstring.h  SubstringFromBlock.cpp  SubstringFromBlock.h  SubstringFromBorder.cpp  SubstringFromBorder.h  SubstringKMP.cpp  SubstringKMP.h
tests/: Test.cpp  Test.h
